# impulse-link-on-archos

./: CMakeLists.txt  README.md
include/: file_model.h  http_server.h  notification_model.h
src/: main.cpp
src/gui/: main_window.cpp  main_window.h
src/http_server/: request_handler.cpp  server.cpp
src/models/: file_model.cpp  notification_model.cpp
